--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   firebase_core: ^1.13.1
   cloud_firestore: 3.1.10
   flutter_staggered_grid_view: ^0.6.1
+  http: 0.13.4
+  flutter_lints: ^1.0.0
+  flutter_html:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,9 +50,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  flutter_staggered_grid_view: ^0.6.1
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
